<resources>

    <string name="app_name">WritingTrackerApplication</string>
    <string name="project_title">project_title</string>
    <string name="word_count_goal">word_count_goal</string>
    <string name="percent_completed">percent_completed</string>
    <string name="word_count">word_count</string>
    <string name="average_words_per_day">average_words_per_day</string>
    <string name="average_words_per_day_needed_to_meet_goal">average_words_per_day_needed_to_meet_goal</string>
    <string name="goal_days">goal_days</string>
    <string name="predicted_days">predicted_days</string>
    <string name="start_date">start_date</string>
    <string name="largest_word_addition">largest_word_addition</string>
    <string name="word_addition_button">Add Words</string>
    <string name="add_words_button">Add Words</string>
    <string name="Add_words_text">Enter number of words here</string>
    <string name="project_title_key">project_title_key</string>
    <string name="word_count_goal_key">word_count_goal_key</string>
    <string name="word_count_key">word_count_key</string>
    <string name="start_date_year_key">start_date_year_key</string>
    <string name="start_date_month_key">start_date_month_key</string>
    <string name="start_date_day_key">start_date_day_key</string>
    <string name="largest_word_addition_key">largest_word_addition_key</string>
    <string name="total_inputs_key">total_inputs_key</string>
    <string name="average_words_per_day_key">average_words_per_day_key</string>
    <string name="goal_set_start_date_year_key">goal_set_start_date_year_key</string>
    <string name="goal_set_start_date_month_key">goal_set_start_date_month_key</string>
    <string name="goal_set_start_date_day_key">goal_set_start_date_day_key</string>
    <string name="goal_days_key">goal_days_key</string>
    <string name="preference_key">preference_key</string>
    <string name="toast_input_low">Input must be greater than 0</string>
    <string name="toast_input_max">Input must be less than </string>
    <string name="toast_input1">You added a total of </string>
    <string name="toast_input2"> words</string>
    <string name="toast_undo">You undid </string>
    <string name="back_button">Back</string>
    <string name="undo_button">Undo</string>
    <string name="instruction_text_view">Enter words into the box and select Add Words\nSelect Undo to undo the word addition</string>
    <string name="total_words_added_text_view">Total words added: </string>
    <string name="words_removed_text_view">Words removed: </string>
    <string name="title_activity_set_word_count_goal">SetWordCountGoalActivity</string>
    <string name="title_activity_set_goal_days">SetGoalDaysActivity</string>
    <string name="set_word_goal_button">Set Word Goal</string>
    <string name="toast_input_low_word_count">Input must be greater than </string>
    <string name="word_count_instruction_text_view">Enter a number greater than word total an\nselect Set Word Goal to set your new word goal</string>
    <string name="toast_change_word_goal">You changed the word goal to </string>
    <string name="percent_completed_text4">% Completed!!!!</string>
    <string name="percent_completed_text3">% Completed!!!</string>
    <string name="percent_completed_text2">% Completed!!</string>
    <string name="percent_completed_text1">% Completed!</string>
    <string name="percent_completed_text">% Completed</string>
    <string name="word_count_goal_text">Word Count Goal: </string>
    <string name="predicted_text">Predicted days to completion: </string>
    <string name="goal_text">Goal days to completion: </string>
    <string name="average_text">Average words per day: </string>
    <string name="average_plus_text">Average words needed: </string>
    <string name="date_text">Date Started: </string>
    <string name="largest_text">Largest word addition: </string>
    <string name="word_count_text">Word count: </string>
    <string name="word_total_view_text">word_total_view_text</string>
    <string name="word_goal_view_text">word_goal_view_text</string>
    <string name="msgda_instructions">Enter the number of days you want to complete\nyour project in, then press the Set Goal Days button to confirm.</string>
    <string name="msgda_edit_text">Enter Goal Days</string>
    <string name="msgda_confirm_button">Set Goal Days</string>
    <string name="msgda_goal_days">Goal Days Remaining: </string>
    <string name="toast_set_goal_days_confirm">"The new number of goal days is "</string>
    <string name="npa_name_edittext">Project Name</string>
    <string name="npa_wordcount_edittext">Word Count Goal</string>
    <string name="npa_goaldays_edittext">Goal Days to Completion</string>
    <string name="largest_word_addition_toast">New word addition record: </string>
    <string name="npa_new_project_text">New Project</string>
    <string name="npa_confirm_button">Make New Project</string>
    <string name="new_project_key">new_project_key</string>

</resources>
