<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.blueshroom.harry.writingtrackerapplication.newProjectActivity">

    <TextView
        android:id="@+id/npa_new_project_text"
        android:text="@string/npa_new_project_text"

        android:textSize="25sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/npa_name_edittext"
        android:text="@string/npa_name_edittext"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="84dp"
        android:layout_marginStart="8dp"
        android:layout_marginRight="84dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        android:gravity="center_horizontal"
        app:layout_constraintTop_toBottomOf="@+id/npa_new_project_text" />

    <EditText
        android:id="@+id/npa_wordcount_edittext"
        android:text="@string/npa_wordcount_edittext"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/npa_name_edittext"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.503" />

    <EditText
        android:id="@+id/npa_goaldays_edittext"
        android:text="@string/npa_goaldays_edittext"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/npa_wordcount_edittext"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:gravity="center_horizontal"
        app:layout_constraintHorizontal_bias="0.503" />

    <Button
        android:id="@+id/npa_confirm_button"
        android:text="@string/npa_confirm_button"

        android:onClick="confirm"

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/npa_goaldays_edittext" />

</android.support.constraint.ConstraintLayout>
